--- a/catalog.html
+++ b/catalog.html
@@ -81,27 +81,27 @@
             <h2 class="visually-hidden">Фильтры</h2>
             <p>Найдено: <span>3</span></p>
             <p class="sorting">Сортировка:</p>
-            <ul class="filters-list">
-                <li class="filters-item active-filters"><a rel="nofollow" href="" aria-label="По цене">По цене</a></li>
-                <li class="filters-item"><a rel="nofollow" href="" aria-label="По типу">По типу</a></li>
-                <li class="filters-item"><a rel="nofollow" href="" aria-label="По рейтингу">По рейтингу</a></li>
-            </ul>
-            <ul class="filters-arrow">
-                <li class="filters-arrow-item ">
-                    <a class="up" href="" aria-label="Вверх">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
-                            <path d="M5.5 0L0 10h11z"/>
-                        </svg>
-                     </a>
-                </li>
-                <li class="filters-arrow-item down">
-                    <a href="" aria-label="Вниз">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
-                            <path  d="M5.5 10L0 0h11"/>
-                        </svg>
-                    </a>
-                </li>
-            </ul>
+                <ul class="filters-list">
+                 <li class="filters-item active-filters"><a rel="nofollow" href="" aria-label="Фильтр по цене">По цене</a></li>
+                 <li class="filters-item"><a rel="nofollow" href="" aria-label="Фильтр по тиипу">По типу</a></li>
+                 <li class="filters-item"><a rel="nofollow" href="" aria-label="Фильтр по рейтигу">По рейтингу</a></li>
+                </ul>
+                <ul class="filters-arrow">
+                    <li class="filters-arrow-item ">
+                        <a class="up" href="" aria-label="Вверх">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                                <path d="M5.5 0L0 10h11z"/>
+                            </svg>
+                         </a>
+                    </li>
+                    <li class="filters-arrow-item down">
+                        <a href="" aria-label="Вниз">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                                <path  d="M5.5 10L0 0h11"/>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
         </section>
 
 		<section class="results">
