--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="question">
                     <h2>Заинтересовались?</h2>
                     <p>Укажите предполагаемые даты поездки,<br>
-                        мы покажем вам лучшие предложения гостиниц в седоне</p>
+                       и мы покажем вам лучшие предложения гостиниц в седоне</p>
                 </div>
                 <button type="button" class="offers-button" aria-label="Поиск гостиницы">Поиск гостиницы в седоне</button>
                 <div class="form-wrap form-show">
@@ -188,7 +188,7 @@
         </footer>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
 
 </body>
 
